[gd_scene load_steps=2 format=3 uid="uid://bonfwmtk5mci0"]

[ext_resource type="Script" uid="uid://cgs7sgkxxrye7" path="res://scene/args_set.gd" id="1_6cacm"]

[node name="ArgsSet" type="Control"]
custom_minimum_size = Vector2(0, 112)
layout_mode = 3
anchors_preset = 0
offset_right = 1008.0
offset_bottom = 112.0
script = ExtResource("1_6cacm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Args1" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Args1"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Input folder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InputLineEdit" type="LineEdit" parent="VBoxContainer/Args1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32

[node name="InputFilePickerButton" type="Button" parent="VBoxContainer/Args1"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Pick from files"

[node name="Args2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/Args2"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Output folder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OutputLineEdit" type="LineEdit" parent="VBoxContainer/Args2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32

[node name="OutputFilePickerButton" type="Button" parent="VBoxContainer/Args2"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Pick from files"

[connection signal="pressed" from="VBoxContainer/Args1/InputFilePickerButton" to="." method="_on_input_file_picker_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Args2/OutputFilePickerButton" to="." method="_on_output_file_picker_button_pressed"]
